[B]Version 0.0.5[/B]

added several stations. still beta