@@ -1,3 +1,7 @@
+[B]Version 0.0.6[/B]
+
+added history channel
+
 [B]Version 0.0.5[/B]
 
 added several stations. still beta
